2008-10-21  Esteban Sanchez  <estebans@artica.es>

	* godmode/profiles/profile_list.php: Rewritten be more consistent and
	use generic functions for HTML output. Also a bug when creating a
	profile is fixed.

2008-10-20  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* pandoradb_data.sql, pandora_db.sql: id_npc was rendered unnecessary
	with the last rewrite of the profiles page and id_np should really be
	the key since that what we're selecting/sorting on.

	* operation/events/events.php: Fixed Bug #2174790 and fixed the
	brackets being in all the wrong places. Also added checks so that only 
	admins can retrieve system events

	* include/functions_db.php: Added an option to get_user_groups so that
	other privileges than AR can be retrieved.

	* operation/visual_console/index.php: Added ACL check. Security issue
	reported in bug #2174790

	* operation/menu.php: Added ACL check. Security issue reported in bug
	#2174790

2008-10-20  Esteban Sanchez  <estebans@artica.es>

	* operation/agentes/estado_agente.php: Checking if there are monitors
	down has more priority than check if there are no data.

2008-10-20  Manuel Arostegui  <marostegui@artica.es>

	* operation/agentes/estado_agente.php: Fixed agent status color
	column. It was showing incorrect values in some cases like without
	data or monitors.

	* ChangeLog: Fixed Jorge previous commit style.

2008-10-20  Jorge Gonzalez  <jorgegonz@artica.es>

	* operation/agentes/estado_agente.php, operation/agentes/bulbs.php:
	Reverted changes.

2008-10-20  Jorge Gonzalez  <jorgegonz@artica.es>

	* operation/agentes/estado_agente.php, operation/agentes/bulbs.php:
	  fixed bug, blue monitor means it has no monitors, while gray means
	  it has no data.

2008-10-20  Esteban Sanchez  <estebans@artica.es>

	* operation/agentes/estado_grupo.php: Fixed a notice error when the
	query returns nothing.

2008-10-20  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/cs.po, include/languages/pt_BR.po,